RESOLVED FIXED25396
REGRESSION (r34681): Text is no longer underlined after delete
https://bugs.webkit.org/show_bug.cgi?id=25396
Summary REGRESSION (r34681): Text is no longer underlined after delete
Adele Peterson
Reported 2009-04-25 11:33:34 PDT
See attached test case. This was caused by http://trac.webkit.org/changeset/34681 In moveParagraphs, the style from the empty paragraph gets applied to the first line after the delete occurs. I have a patch on the way... <rdar://problem/6712771>
Attachments
test case (753 bytes, text/html)
2009-04-25 11:34 PDT, Adele Peterson
no flags
patch (42.67 KB, patch)
2009-04-25 11:38 PDT, Adele Peterson
oliver: review+
Adele Peterson
Comment 1 2009-04-25 11:34:14 PDT
Created attachment 29787 [details] test case
Adele Peterson
Comment 2 2009-04-25 11:38:00 PDT
Justin Garcia
Comment 3 2009-04-25 16:56:42 PDT
This is the same as https://bugs.webkit.org/show_bug.cgi?id=24862 which Julie is actively working on. I think I remember her saying that there was a case in which the strategy you used wouldn't work, but you'll have to ask her for the specifics.
Adele Peterson
Comment 4 2009-04-25 17:00:56 PDT
Hmm ok. I checked in revision 42869, but I'll move this discussion over to the other bug.
Note You need to log in before you can comment on or make changes to this bug.