WebCore:

2009-04-25  Adele Peterson  <adele@apple.com>

        Reviewed by Oliver Hunt.

        Fix for <rdar://problem/6712771> REGRESSION(34681): Text is no longer underlined after delete
        https://bugs.webkit.org/show_bug.cgi?id=25396

        Test: editing/deleting/delete-br-013.html

        * editing/CompositeEditCommand.cpp: (WebCore::CompositeEditCommand::moveParagraphs):
         Only preserve an empty paragraph's style when moving paragraphs around if the selection is still
         in an empty paragraph after the move occurs.  This was causing the empty paragraph's style to overwrite
         the previous paragraph's style during a delete of an empty paragraph.

LayoutTests:

2009-04-25  Adele Peterson  <adele@apple.com>

        Reviewed by Oliver Hunt.

        Test for <rdar://problem/6712771> REGRESSION(34681): Text is no longer underlined after delete
        https://bugs.webkit.org/show_bug.cgi?id=25396

        * editing/deleting/delete-br-013.html: Added.
        * platform/mac/editing/deleting/delete-br-013-expected.checksum: Added.
        * platform/mac/editing/deleting/delete-br-013-expected.png: Added.
        * platform/mac/editing/deleting/delete-br-013-expected.txt: Added.



Canonical link: https://commits.webkit.org/34919@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42869 268f45cc-cd09-0410-ab3c-d52691b4dbfc